# BooksDirectoryForMe

./: README.md  fileCounter.py
CompressorTool/: CMakeLists.txt  setup.py
CompressorTool/bindings/: bindings.cpp
CompressorTool/compressor/include/: compressor.hpp
CompressorTool/compressor/src/: compressor.cpp
CompressorTool/frontend/: app.py
